// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic render 1`] = `
<body>
  <div>
    <div
      class="sc-bdnxRM jBnfoK"
    >
      <div>
        CollapsibleTable
      </div>
    </div>
  </div>
</body>
`;

exports[`handles errors 1`] = `
<body>
  <div>
    <div
      class="sc-bdnxRM jBnfoK"
    >
      <h1
        class="sc-gtsrHT DoTxJ"
      >
        Something went wrong.
      </h1>
    </div>
  </div>
</body>
`;
